--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "discord.js": "^14.11.0",
-    "express": "^4.18.2"
+  "discord.js": "^14.11.0",
+  "dotenv": "^16.3.1"
+}
   },
   "engines": {
     "node": ">=18"
